<resources>
	<string name="app_name">MvvmDemo</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="start_timer">Start Timer</string>
	<string name="show_message">Show Message</string>
	<string name="message_title">Message</string>
	<string name="message_text">A message to display</string>
	<string name="choose_file">Choose File</string>
	<string name="fibonacci">Fibonacci</string>
	<string name="primes">Primes</string>
	<string name="start_flow">Start Flow</string>
	<string name="collect_flow">Collect Flow</string>
</resources>
